--- a/server/package.json
+++ b/server/package.json
@@ -15,9 +15,9 @@
     "nodemon": "^2.0.22"
   },
   "dependencies": {
+    "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
-    "express-openid-connect": "^2.12.1",
     "mongoose": "^7.0.3"
   }
 }
