--- a/server/package.json
+++ b/server/package.json
@@ -15,10 +15,13 @@
     "nodemon": "^2.0.22"
   },
   "dependencies": {
+    "axios": "^1.3.5",
     "bcrypt": "^5.1.0",
+    "cheerio": "^1.0.0-rc.12",
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
-    "mongoose": "^7.0.3"
+    "mongoose": "^7.0.3",
+    "puppeteer": "^19.9.0"
   }
 }
